--- a/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
+++ b/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main_activity_adaptive_cards_sample"
@@ -11,11 +11,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.microsoft.adaptivecards.adaptivecardssample.MainActivityAdaptiveCardsSample"
-    tools:showIn="@layout/activity_main_adaptive_cards_sample">
+    tools:showIn="@layout/activity_main_adaptive_cards_sample"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/sample_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Choose JSON File"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:labelFor="@+id/spinnerJsonFileList" />
+
+        <Spinner
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:id="@+id/spinnerJsonFileList"
+            android:dropDownWidth="match_parent"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_centerHorizontal="true" />
+
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/layoutAdaptiveCard" />
+    </ScrollView>
+
+</LinearLayout>
