--- a/Visualizer/css/skypeCard.css
+++ b/Visualizer/css/skypeCard.css
@@ -160,7 +160,7 @@
     background-repeat: no-repeat;
 }
 
-table.factGroup {
+table.factSet {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -168,7 +168,7 @@ table.factGroup {
     border-collapse: collapse;
 }
 
-tr.factGroupRowSpacer {
+tr.factSetRowSpacer {
     height: 10px;
 }
 
@@ -198,11 +198,11 @@ td.factValue {
     margin: 5px 0px 5px 0px;
 }
 
-.actionGroup {
+.actionSet {
     margin: 20px 0px 0px 0px;
 }
 
-/*.columnGroup {
+/*.columnSet {
     margin: 15px 0px 5px 0px;
 }*/
 
