--- a/Visualizer/css/liveTile.css
+++ b/Visualizer/css/liveTile.css
@@ -148,7 +148,7 @@
     background-repeat: no-repeat;
 }
 
-table.factGroup {
+table.factSet {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -156,7 +156,7 @@ table.factGroup {
     border-collapse: collapse;
 }
 
-tr.factGroupRowSpacer {
+tr.factSetRowSpacer {
     height: 10px;
 }
 
@@ -186,11 +186,11 @@ td.factValue {
     margin: 5px 0px 5px 0px;
 }
 
-.actionGroup {
+.actionSet {
     margin: 20px 0px 0px 0px;
 }
 
-.columnGroup {
+.columnSet {
     margin: 15px 0px 5px 0px;
 }
 
