--- a/Visualizer/css/teamsConnectorCard.css
+++ b/Visualizer/css/teamsConnectorCard.css
@@ -147,7 +147,7 @@
     background-repeat: no-repeat;
 }
 
-table.factGroup {
+table.factSet {
     margin: 20px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -155,7 +155,7 @@ table.factGroup {
     border-collapse: collapse;
 }
 
-tr.factGroupRowSpacer {
+tr.factSetRowSpacer {
     height: 10px;
 }
 
@@ -185,11 +185,11 @@ td.factValue {
     margin: 20px 0px 0px 0px;
 }
 
-.actionGroup {
+.actionSet {
     margin: 20px 0px 0px 0px;
 }
 
-.columnGroup {
+.columnSet {
     margin: 20px 0px 0px 0px;
 }
 
