--- a/Visualizer/css/toast.css
+++ b/Visualizer/css/toast.css
@@ -148,7 +148,7 @@
     background-repeat: no-repeat;
 }
 
-table.factGroup {
+table.factSet {
     margin: 10px 0px 0px 0px;
     border-width: 0px;
     border-spacing: 0px;
@@ -156,7 +156,7 @@ table.factGroup {
     border-collapse: collapse;
 }
 
-tr.factGroupRowSpacer {
+tr.factSetRowSpacer {
     height: 10px;
 }
 
@@ -187,11 +187,11 @@ td.factValue {
     margin: 20px 0px 0px 0px;
 }
 
-.actionGroup {
+.actionSet {
     margin: 10px 0px 0px 0px;
 }
 
-.columnGroup {
+.columnSet {
     margin: 20px 0px 0px 0px;
 }
 
