Fix naming so samples can load in html

--- a/renderers/Html/css/skypeCard.css
+++ b/renderers/Html/css/skypeCard.css
@@ -172,7 +172,7 @@ tr.factSetRowSpacer {
     height: 10px;
 }
 
-td.factName {
+td.factTitle {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -189,7 +189,7 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageGallery {
+.imageSet {
     margin: 20px 0px 0px 0px;
 }
 
