--- a/renderers/Html/css/bing.css
+++ b/renderers/Html/css/bing.css
@@ -162,7 +162,7 @@ tr.factSetRowSpacer {
     height: 10px;
 }
 
-td.factName {
+td.factTitle {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -179,7 +179,7 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageGallery {
+.imageSet {
     margin: 20px 0px 0px 0px;
 }
 
