--- a/renderers/Html/css/outlookConnectorCard.css
+++ b/renderers/Html/css/outlookConnectorCard.css
@@ -160,7 +160,7 @@ tr.factSetRowSpacer {
     height: 10px;
 }
 
-td.factName {
+td.factTitle {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -177,7 +177,7 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageGallery {
+.imageSet {
     margin: 20px 0px 0px 0px;
 }
 
