--- a/renderers/Html/css/teamsConnectorCard.css
+++ b/renderers/Html/css/teamsConnectorCard.css
@@ -159,7 +159,7 @@ tr.factSetRowSpacer {
     height: 10px;
 }
 
-td.factName {
+td.factTitle {
     border-width: 0px;
     padding: 0px;
     border-style: none;
@@ -176,7 +176,7 @@ td.factValue {
     padding: 0px 0px 0px 10px
 }
 
-.imageGallery {
+.imageSet {
     margin: 20px 0px 0px 0px;
 }
 
